
bin_PROGRAMS = mentohust

EXTRA_DIST = mentohust.conf ../other/pcap.h ../other/pcap-bpf.h
 
mentohust_SOURCES = mentohust.c myconfig.c mystate.c myfunc.c dlfunc.c md5.c myini.c
mentohust_SOURCES +=  myconfig.h mystate.h myfunc.h dlfunc.h md5.h myini.h

#MentoHUST_DEPENDENCIES = $(top_builddir)/lib/libconfig.a

#MentoHUST_LDADD = -lcommon
#MentoHUST_LDFLAGS =  -L$(top_builddir)/lib

